--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,16 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --blue: #1e40af;
+  --yellow: #ca8a04;
+  --purple: #6b21a8;
+  --gray: #4b5563;
+  --cd: #2dd4bf;
+  --int: #3b0764;
+  --wby: #db2777;
+  --uni: #9d2342;
+  --plat: #0ae98a;
+  --linkedin: #0a63bc;
 }
 
 @media (prefers-color-scheme: light) {
